# vectorinst-bootcamp-fl-bmo

./: .gitattributes  .gitignore  README.md  pyproject.toml
EDA/: eda.ipynb
baseline/: baseline_model_FedProx.ipynb  baseline_model_limited.ipynb  baseline_model_limited_V0.1.ipynb  baseline_model_limited_V0.2.ipynb  initial_exploration_baseline_model.ipynb
fl/: aml_model_V01.py  aml_model_fedper.py  client.py  client_FedProx.py  client_V0.1.py  client_V01.py  client_fedper.py  config.yaml  load_aml_data.py  load_aml_data_V0.1.py  load_aml_data_V01.py  model.py  server.py  server_FedPer.py  server_FedProx.py
fl/checkpoints/: best_model.pkl  best_model_fedavg.pkl  best_model_fedper.pkl  best_model_limited_baseline.pkl  latest_model.pkl  latest_model_fedavg.pkl  latest_model_fedper.pkl
fl/utils/: FedPerExchanger.py
src/vectorinst_bootcamp_fl_bmo/: aml_model.py  client.py  config.yaml  load_aml_data.py  server.py
src/vectorinst_bootcamp_fl_bmo/baseline/: baseline_model_regularlization.ipynb
src/vectorinst_bootcamp_fl_bmo/baseline/EDA/: baseline_model.ipynb  eda.ipynb
